<resources>
    <!-- Start screen -->
    <string name="app_name">SimplePlayer</string>
    <string name="start_screen_choose_directory_title">Откуда играть музыку?</string>
    <string name="start_screen_choose_directory_description">Выберите папку с аудиозаписями</string>
    <string name="start_screen_choose_directory_button">Выбрать папку</string>
    <string name="mini_player_unknown_track_name">Unknown</string>

    <!-- Directory chooser -->
    <string name="directory_chooser_warning">В данной директории нет .mp3 файлов</string>
    <string-array name="supported_formats">
        <item>.mp3</item>
    </string-array>
    <string name="done_description">done</string>
    <string name="album_description">album</string>
    <string name="add_description">add</string>
    <string name="explicit_description">explicit</string>
    <string name="menu_description">menu</string>
    <string name="previous_description">previous composition</string>
    <string name="play_description">play</string>
    <string name="pause_description">pause</string>
    <string name="next_description">next composition</string>
    <string name="shuffle_description">shuffle</string>
    <string name="repeat_description">repeat</string>
</resources>
